kubernetes/apps/storage/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: storage
spec:
  ingressClassName: internal
  rules:
  - host: &host "longhorn.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: *host
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - longhorn.skynerv.com
